examples/fail/postulate-with-definition.agda
-- Postulates cannot have a definition

postulate
  A : Set1
  A = Set

-- should fail
